WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15023
REGRESSION (
r21113
-
r21143
): JavaScript tooltip rendering bug
https://bugs.webkit.org/show_bug.cgi?id=15023
Summary
REGRESSION (r21113-r21143): JavaScript tooltip rendering bug
Thomas Steinacher
Reported
2007-08-20 11:02:19 PDT
Move the mouse over the example page. Notice the rendering bugs (using
r25145
here): Parts of the page are not redrawn properly. Here's another URL with the same problems:
http://www.walterzorn.com/tooltip/tooltip_e.htm
Attachments
Screenshot
(13.02 KB, image/png)
2007-08-20 11:56 PDT
,
Matt Lilek
no flags
Details
Reduction
(570 bytes, text/html)
2007-08-20 13:33 PDT
,
mitz
no flags
Details
Cache layers' repaint rects when they turn visible
(8.92 KB, patch)
2007-08-20 14:43 PDT
,
mitz
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2007-08-20 11:54:19 PDT
Confirmed with
r25153
. This is a regression from Safari 3.0.3 Beta.
Matt Lilek
Comment 2
2007-08-20 11:56:13 PDT
Created
attachment 16036
[details]
Screenshot
mitz
Comment 3
2007-08-20 13:33:58 PDT
Created
attachment 16039
[details]
Reduction
mitz
Comment 4
2007-08-20 14:43:12 PDT
Created
attachment 16042
[details]
Cache layers' repaint rects when they turn visible Includes repaint test
Dave Hyatt
Comment 5
2007-08-20 14:46:58 PDT
Comment on
attachment 16042
[details]
Cache layers' repaint rects when they turn visible r=me
Matt Lilek
Comment 6
2007-08-20 18:44:20 PDT
Committed revision 25168.
Mark Rowe (bdash)
Comment 7
2007-08-24 03:18:25 PDT
<
rdar://problem/5435092
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug