WebCore: 	2007-08-20  Mitz Pettel  <mitz@webkit.org>

Reviewed by Dave Hyatt.

        - fix http://bugs.webkit.org/show_bug.cgi?id=15023
          REGRESSION (r21113-r21143): JavaScript tooltip rendering bug

        Test: fast/repaint/layer-visibility.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::setHasVisibleContent): Cache the layer's
        rects when it changes to visible.

LayoutTests:
	2007-08-20  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Dave Hyatt.

        - repaint test for http://bugs.webkit.org/show_bug.cgi?id=15023
          REGRESSION (r21113-r21143): JavaScript tooltip rendering bug

        * fast/repaint/layer-visibility.html: Added.
        * platform/mac/fast: Added.
        * platform/mac/fast/repaint: Added.
        * platform/mac/fast/repaint/layer-visibility-expected.checksum: Added.
        * platform/mac/fast/repaint/layer-visibility-expected.png: Added.
        * platform/mac/fast/repaint/layer-visibility-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@25168 bbb929c8-8fbe-4397-9dbb-9b2b20218538