third_party/WebKit/WebCore/rendering/RenderLayer.cpp
@@ -232,6 +232,10 @@ void RenderLayer::setHasVisibleContent(bool b)
         return;
     m_visibleContentStatusDirty = false; 
     m_hasVisibleContent = b;
+    if (m_hasVisibleContent) {
+        m_repaintRect = renderer()->absoluteClippedOverflowRect();
+        m_outlineBox = renderer()->absoluteOutlineBox();
+    }
     if (parent())
         parent()->childVisibilityChanged(m_hasVisibleContent);
 }
